--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ascendio/ui": "workspace:*",
     "@ascendio/hooks": "workspace:*",
+    "@ascendio/ui": "workspace:*",
+    "motion": "^10.17.0",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522"
