--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -47,10 +47,12 @@
     "postcss-loader": "^8.1.1",
     "storybook": "^8.1.11",
     "style-loader": "^4.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.1.5",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
