--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -49,6 +49,7 @@
     "@ascendio/typescript-config": "workspace:*",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.10.6",
+    "@types/semver": "^7.5.8",
     "eslint": "^8.57.0",
     "tsup": "^8.0.1",
     "type-fest": "^4.10.1",
@@ -61,6 +62,7 @@
     "fs-extra": "^11.2.0",
     "ora": "^8.0.1",
     "prompts": "^2.4.2",
-    "replace-in-file": "^8.0.1"
+    "replace-in-file": "^8.0.1",
+    "semver": "^7.6.2"
   }
 }
