--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ascendio",
-  "version": "0.0.0",
+  "version": "0.1.1",
   "description": "An CLI designed to simplify the initial setup of your turborepo project. Ideal for indie developers or people looking to create a micro SaaS.",
   "publishConfig": {
     "access": "public"
@@ -56,6 +56,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@changesets/cli": "^2.27.7",
     "@clack/prompts": "^0.7.0",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
