--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -10,7 +10,7 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "ascendio": "workspace:*",
+    "@ascendio/utils": "workspace:*",
     "@types/node": "^20.10.8",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
