--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -10,16 +10,17 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@ascendio/utils": "workspace:*",
     "@types/node": "^20.10.8",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
+    "clsx": "^2.1.1",
     "motion": "^10.17.0",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
