--- a/packages/cli/template/packages/utils/tsconfig.json
+++ b/packages/cli/template/packages/utils/tsconfig.json
@@ -4,7 +4,8 @@
     "types": ["jest"],
     "outDir": "dist",
     "rootDir": "src",
-    "module": "CommonJS",
+    "module": "ESNext",
+    "target": "ESNext",
     "moduleResolution": "Node"
   },
   "include": ["src"],
